--- a/resume.html
+++ b/resume.html
@@ -38,6 +38,9 @@
                 <td width="1200vh" align="bottom">
                     <h2>Mohd Anas</h2>
                     <p><b>GitHub: <a href="https://github.com/anas-aka" target="_blank">anas-aka</a></b></p>
+                    <p><b>linkedin: <a href="https://www.linkedin.com/in/ansari-ak47
+                        " target="_blank">ansari-ak47</a></b></p>
+
                     <p>anasansariaka47@gmail.com</p>
                     <p>+91 8103759909</p>
                     <p>132/504,Bakarganj,Kanpur Nagar,U P India 208023</p>
