added my linkedin profile

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
                     <h2>Mohd Anas</h2>
                     <p><b>GitHub: <a href="https://github.com/anas-aka" target="_blank">anas-aka</a></b></p>
                     <p><b>linkedin: <a href="https://www.linkedin.com/in/ansari-ak47
-                        " target="_blank">ansari-ak47</a></b></p>
+                        " target="_blank">Mohd Anas</a></b></p>
 
                     <p>anasansariaka47@gmail.com</p>
                     <p>+91 8103759909</p>
